--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ mypy-extensions==0.4.3
 pathspec==0.8.1
 pyinstaller==4.1
 pyinstaller-hooks-contrib==2020.10
+python-decouple==3.3
 regex==2020.11.13
 schedule==0.6.0
 slack-sdk==3.1.0
